Bug 488988 - Internal effects get reset when clicking the "Defaults" button in the Desktop Effects KCM, which can be awkward if the user disabled or configured them from elsewhere
Summary: Internal effects get reset when clicking the "Defaults" button in the Desktop...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.1.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-06-22 15:45 UTC by medin
Modified: 2024-07-05 18:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2024-06-22 15:45:18 UTC
1. Start Plasma settings app,
2. Disable "Shake Cursor" in Accessibility and click Apply,
3. Go to Window Management> Desktop Effects, then click on "Defaults" to reset all effects and click Apply.

Observed result:
Shake Cursor is re-enabled in Accessibility

Expected result:
Shake Cursor shouldn't be re-enabled in Accessibility because it's not listed in Desktop Effects page.


Operating System: Manjaro Linux 
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Kernel Version: 6.9.6-1-MANJARO (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-06-25 21:06:29 UTC
Can reproduce. This is an awkward interaction. Technically the effect is indeed a desktop effect, but it's not shown in the desktop effects KCM (unless you un-hide internal effects) so users aren't going to think of it that way. And this problem will become more widespread as we hide more effects from the KCM so we can show a UI for them in more appropriate places.
Comment 2 medin 2024-06-25 21:36:00 UTC
(In reply to Nate Graham from comment #1)
> Can reproduce. This is an awkward interaction. Technically the effect is
> indeed a desktop effect, but it's not shown in the desktop effects KCM
> (unless you un-hide internal effects) so users aren't going to think of it
> that way. And this problem will become more widespread as we hide more
> effects from the KCM so we can show a UI for them in more appropriate places.

I think it should be visible inside Desktop Effects page, the same as how "Track Mouse" effect is listed there. And synchronize the back model between the visible graphical components in Accessibility and Desktop Effects.

And aside from the bug, personally I see "Track Mouse" has more chance to be adopted as default effect for finding mouse cursor, as it's more visual appealing than that big and blurry zooming.
Comment 3 Bug Janitor Service 2024-06-27 17:35:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6010
Comment 4 Vlad Zahorodnii 2024-06-29 09:51:37 UTC
Git commit 172e26617c63bff2fc6aef4a6b2b70f7d859b8f2 by Vlad Zahorodnii.
Committed on 29/06/2024 at 09:40.
Pushed by vladz into branch 'master'.

kcms/effects: Exclude internal effects

The internal effects implement some of the core plasma functionality, for
example screenshots, but being an effect is rather an implementation detail.

Also we have pivoted towards unloading the desktop effects kcm and moving
effect configuration in more appropriate places.

M  +1    -1    src/kcms/common/effectsmodel.cpp
M  +0    -20   src/kcms/effects/effectsfilterproxymodel.cpp
M  +0    -6    src/kcms/effects/effectsfilterproxymodel.h
M  +0    -8    src/kcms/effects/ui/main.qml

https://invent.kde.org/plasma/kwin/-/commit/172e26617c63bff2fc6aef4a6b2b70f7d859b8f2