feat: exclude internal effects

The internal effects implement some of the core plasma functionality, for
example screenshots, but being an effect is rather an implementation detail.

Also we have pivoted towards unloading the desktop effects kcm and moving
effect configuration in more appropriate places.

BUG: 488988